# AoG_Solver

./: .gitignore  CMakeLists.txt  Makefile  README.md  Zone1.ansi  Zone2.ansi  Zone3.ansi  batch_run.sh  main.cpp
src/: checks.cpp  checks.h  defines.h  dfs.cpp  dfs.h  main.cpp  puzzle.cpp  puzzle.h  shapes.cpp  shapes.h  types.h
